--- a/test/fixtures/index.html
+++ b/test/fixtures/index.html
@@ -3,3 +3,5 @@
 <a href="mailto:john@appleseed.com?subject=Job%20Application">john@appleseed.com</a>
 
 <a href="mailto:john@appleseed.com?subject=Job%20Application"><span id="something" class="x1 x2 x3" style="padding-bottom: -20px;"><div>Test</div></span></a>
+
+<a href="mailto:john@appleseed.com?subject=Job%20Application">A B C D E F G H I K L M N O P Q R S T V X Y Z & ⁊ Ƿ Þ Ð Æ 1	2	3	4	5	6	7	8	9	10	11	12	13	14	15	16	17	18	19	20	21	22	23	24	25	26</a>
